feat: Added CORS feature
